fix(front): Fix the broken styles in the page `News`
Because now we use CSS Module rather than CSS-in-JS, some CSS variables are
broken.

Now we fixed it.

--- a/front/src/component/Markdown/styles/Markdown.module.scss
+++ b/front/src/component/Markdown/styles/Markdown.module.scss
@@ -1,26 +1,31 @@
+@use "../../../styles/fontSize";
+@use "../../../styles/fontWeight";
+@use "../../../styles/lineHeight";
+@use "../../../styles/color";
+
 .markdown {
-    h1 { font-size: var(--fs-5xl); }
-    h2 { font-size: var(--fs-4xl); }
-    h3 { font-size: var(--fs-3xl); }
-    h4 { font-size: var(--fs-2xl); }
-    h5 { font-size: var(--fs-xl); }
-    h6 { font-size: var(--fs-lg); }
+    h1 { font-size: fontSize.$x5l; }
+    h2 { font-size: fontSize.$x4l; }
+    h3 { font-size: fontSize.$x3l; }
+    h4 { font-size: fontSize.$x2l; }
+    h5 { font-size: fontSize.$xl; }
+    h6 { font-size: fontSize.$lg; }
     h1, h2, h3, h4, h5, h6 {
-        font-weight: var(--fw-bold);
+        font-weight: fontWeight.$bold;
         line-height: 1.5;
-        line-height: var(--lh-tight);
-        margin: calc(var(--fs-base) / 2) 0;
+        line-height: lineHeight.$tight;
+        margin: calc(fontSize.$base / 2) 0;
     }
     p {
-        font-size: var(--fs-base);
-        font-weight: var(--fw-base);
-        line-height: var(--lh-base);
-        margin: 0 0 var(--fs-base) 0;
+        font-size: fontSize.$base;
+        font-weight: fontWeight.$base;
+        line-height: lineHeight.$base;
+        margin: 0 0 fontSize.$base 0;
     }
     pre {
-        background-color: var(--clr-bg-second);
-        border-radius: var(--rad);
+        background-color: color.$bg-second;
+        border-radius: 0.25rem;
         padding: 0.5rem;
-        margin: 0 0 var(--fs-base) 0;
+        margin: 0 0 fontSize.$base 0;
     }
 }
